--- a/assets/style.css
+++ b/assets/style.css
@@ -18,8 +18,36 @@ h1{
 .form-container{
     width: 1000px;
     margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
     margin-top: 40px;
     padding: 2rem;
     border-radius: 1rem;
     background-color: white;
+}
+
+.name, .distance, .age-number{
+    flex-basis: 30%;
+}
+
+.age-number{
+    margin-left: 3rem;
+}
+
+.btn{
+    flex-basis: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-ticket, .btn-reset{
+    margin: 1rem 0.5rem;
+} 
+
+p{
+    flex-basis: 100%;
+    text-align: center;
 }
